fix: inputs spacing

--- a/src/components/SwitchNodeDesigner/DisplayForm/ValueList/styles.scss
+++ b/src/components/SwitchNodeDesigner/DisplayForm/ValueList/styles.scss
@@ -13,10 +13,6 @@
   width: 100%;
   min-height: 0rem;
 
-  .bmrg--c-text-input {
-    margin-top: 2rem;
-  }
-
   .bmrg--b-text-input {
     margin-right: 1.875rem;
     max-width: 33.5rem;
